# yadro_internship

./: .gitignore  CMakeLists.txt  README.md
include/: Client.h  ClientPool.h  Club.h  Event.h  Logger.h  Parser.h  Table.h  TablePool.h
include/events/: ClientArrivalEvent.h  ClientChangedSeatingEvent.h  ClientLeftInvoluntarilyEvent.h  ClientLeftVoluntarilyEvent.h  ClientSeatingEvent.h  ClientWaitingEvent.h  ErrorEvent.h  EventBase.h  IncomingEvent.h  OutgoingEvent.h  TimePoint.h
src/: Client.cpp  ClientPool.cpp  Club.cpp  Event.cpp  Logger.cpp  Parser.cpp  Table.cpp  TablePool.cpp  main.cpp
src/events/: ClientArrivalEvent.cpp  ClientChangedSeatingEvent.cpp  ClientLeftInvoluntarilyEvent.cpp  ClientLeftVoluntarilyEvent.cpp  ClientSeatingEvent.cpp  ClientWaitingEvent.cpp  ErrorEvent.cpp  EventBase.cpp  IncomingEvent.cpp  OutgoingEvent.cpp  TimePoint.cpp
tests/unit/: ClientPoolTest.cpp  ClientTest.cpp  ConcreteEventsTest.cpp  ParserTest.cpp  TablePoolTest.cpp  TableTest.cpp  TimePointTest.cpp
